a little about me

--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
-So after spending three years in the tech industry, I somehow decided that it's time I build a portfolio of sorts.
-Nah, it'll be just my space in the web.
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Anuj Upadhyay
+        </title>
+    </head>
+    <body>
+        <pre>
+            Here it goes....
 
-Stay tuned.
+            So far I haven't made much of a mark on the face of earth, or the web one can say, as our lives are getting more and more defined by how we present ourselves virtually.
+
+            And this dumb head of mine hasn't been much of help.
+
+            I do like to write about things. Not very great at it, but I believe I can, and want to write a novel someday.
+
+            I like stories. A bit too much maybe. A good story can really spring me into action. This might be true for a lot of people, as stories have helped humans survive and flourish and acquire the top of the food chain.
+
+            A few more words: Second Chances, Follow Ups
+
+            I want to do good. Someday I will.
+        </pre>
+    </body>
+</html>
